--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <svg>
+        <use></use>
+    </svg>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
