--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <svg>
         <use></use>
     </svg>
-    <script src="./script.js" type="module"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script src="./context.js"></script>
 </body>
 </html>
