--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <svg>
         <use></use>
     </svg>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
     <script src="./context.js"></script>
+    <!-- <script src="./fc_protopyres.js"></script> -->
 </body>
 </html>
