--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <p class="sib">sibling</p>
+    <!-- <p class="sib">sibling</p>
     <ul class="list" id="list1">
       <li>
         <p>text1</p>
@@ -24,10 +24,22 @@
       <li class="item2"></li>
       <li class="item2"></li>
     </ul>
-    <button name="option">Click</button>
-    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+    <button name="option">Click</button> -->
+    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"></a>
     <button type="button" data-action="save">Save</button>
-<button type="button" data-action="close">Close</button>
+<button type="button" data-action="close">Close</button> -->
+
+<form>
+  <label> Name: 
+    <input type="text" name="name">
+  </label>
+    <label> Age: 
+    <input type="text" name="age">
+  </label>
+  <button type="submit">Submit</button>
+</form>
+
+
     <script src="./script.js"></script>
     <script src="./context.js"></script>
     <!-- <script src="./fc_protopyres.js"></script> -->
